started with tests for monte.miners.data